--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding-top: 50px;
             background-color: #fff;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-weight: bold;
         }
 
         text {
@@ -115,16 +116,11 @@
                     <div id="black">#</div>
                 </th>
                 <td rowspan="6" style="text-align: right;">
-                    <pre>
-Strong Against
-- Weak Against
-</pre>
-                    <hr>
-                    <pre>
-Element Score (ES)
-</pre>
+                    <pre>Strong Against<br>- Weak Against<hr>Element Score (ES)</pre>
                 </td>
-                <td rowspan="6">+ES: Good<br>-ES: Bad</td>
+                <td rowspan="6">
+                    <pre>+ES: Good<br>-ES: Bad</pre>
+                </td>
             </tr>
             <tr>
                 <th id="blue" rowspan="2">Blue</th>
